config-root/namespaces/jx/jxboot-helmfile-resources/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: nexus
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - host: nexus.35.240.42.197.nip.io
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
status:
  loadBalancer: {}
